# myna

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  mock-servers-ec.md  pyproject.toml
.github/workflows/: ci-publish.yml  ci-release.yml  docker-publish.yml
docs/: initial-project-plan-prompt.md
src/myna/: __init__.py  config.py  generators.py  main.py  pytest_plugin.py  request_capture.py  response_seeding.py  scenarios.py
src/myna/middleware/: scenario_middleware.py
src/myna/routers/: audio.py  chat.py  embeddings.py  images.py  models.py  utils.py
tests/: conftest.py  test_chat.py  test_endpoints.py  test_json_mode.py  test_pytest_plugin.py  test_request_capture.py  test_response_seeding.py  test_scenarios.py  test_streaming.py
